Add game start logic for Spleef